--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,9 +44,7 @@
         </activity>
         <activity
             android:name=".activity.LoginActivity"
-            android:label="Login">
-
-        </activity>
+            android:label="Login" />
         <activity
             android:name=".activity.ChatActivity"
             android:label="Chat room"
@@ -67,6 +65,16 @@
             android:name=".activity.ChatStrangerActivity"
             android:label="Chat with stranger" />
         <activity android:name=".activity.ChatFriendActivity" />
+        <activity
+            android:name=".activity.ReactActivity"
+            android:theme="@style/PopupDialog" />
+        <activity android:name=".activity.ViewImageActivity" />
+        <activity
+            android:name=".activity.ResultSpinFailActivity"
+            android:theme="@style/PopupDialog" />
+        <activity
+            android:name=".activity.ResultSpinGreatActivity"
+            android:theme="@style/PopupDialog" />
     </application>
 
 </manifest>
